--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,6 @@ ol {
     height: 150px;
     border: 4px solid #000000;
     margin: 15px;
-     
 }
 
 .menu {
@@ -320,10 +319,15 @@ ol {
         margin-left: 50px;
     }
 
+    
+    .formu-cont {
+        width: 500px;
+        justify-content: center;
+    }
+
     .footer {
         padding: 30px;
         flex-direction: column;
         text-align: center;
-        align-items: center;
     }
 }
