--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,6 +1,6 @@
 header {
     /*Estilo de Cabecera*/
-    background-color:#B5B074;
+    background-color:$color-secundario;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -14,7 +14,7 @@ body {
      font-family: 'Montserrat', sans-serif;
 
      .menu {
-        background-color: #B5B074;
+        background-color: $color-secundario;
     }
 
     .logo {
