--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -11,7 +11,7 @@ body {
     /*Estilo del cuerpo del sitio*/
 
      background-color: $color-primario;
-     font-family: 'Montserrat', sans-serif;
+     font-family: $fuente-principal;
 
      .menu {
         background-color: $color-secundario;
@@ -52,12 +52,12 @@ body {
 main {
     h1 {
         text-align: center;
-        font-family: 'Montserrat regular', sans-serif;
+        font-family: $fuente-principal;
         margin: 10px 0px 20px 0px;
     }
     
     h2 {
-        font-family: 'Montserrat regular', sans-serif;
+        font-family: $fuente-principal;
         margin: 10px 0px 20px 0px;
     }
     
