--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,10 @@
   list-style: none;
 }
 
-header {
-  /*Estilo de Cabecera*/
-  background-color: #B5B074;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
 body {
   /*Estilo del cuerpo del sitio*/
   background-color: #F7F2CB;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat regular", sans-serif;
 }
 body .menu {
   background-color: #B5B074;
@@ -48,6 +39,15 @@ body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobr
   padding: 20px;
   background-color: #C3FCF1;
   color: #000000;
+}
+
+header {
+  /*Estilo de Cabecera*/
+  background-color: #B5B074;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
 main .portada {
@@ -214,40 +214,6 @@ header {
   align-items: center;
 }
 
-body {
-  /*Estilo del cuerpo del sitio*/
-  background-color: #F7F2CB;
-  font-family: "Montserrat", sans-serif;
-}
-body .menu {
-  background-color: #B5B074;
-}
-body .logo {
-  width: 170px;
-  height: 150px;
-  border: 4px solid #000000;
-  margin: 15px;
-}
-body ul li {
-  display: inline-block;
-  margin: 10px;
-}
-body a {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-}
-body .a {
-  text-decoration: none;
-  list-style: none;
-}
-body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobre ellos*/
-  font-weight: bold;
-  padding: 20px;
-  background-color: #C3FCF1;
-  color: #000000;
-}
-
 main h1 {
   text-align: center;
   font-family: "Montserrat regular", sans-serif;
@@ -379,40 +345,6 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-}
-
-body {
-  /*Estilo del cuerpo del sitio*/
-  background-color: #F7F2CB;
-  font-family: "Montserrat", sans-serif;
-}
-body .menu {
-  background-color: #B5B074;
-}
-body .logo {
-  width: 170px;
-  height: 150px;
-  border: 4px solid #000000;
-  margin: 15px;
-}
-body ul li {
-  display: inline-block;
-  margin: 10px;
-}
-body a {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-}
-body .a {
-  text-decoration: none;
-  list-style: none;
-}
-body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobre ellos*/
-  font-weight: bold;
-  padding: 20px;
-  background-color: #C3FCF1;
-  color: #000000;
 }
 
 main h1 {
@@ -557,40 +489,6 @@ header {
   align-items: center;
 }
 
-body {
-  /*Estilo del cuerpo del sitio*/
-  background-color: #F7F2CB;
-  font-family: "Montserrat", sans-serif;
-}
-body .menu {
-  background-color: #B5B074;
-}
-body .logo {
-  width: 170px;
-  height: 150px;
-  border: 4px solid #000000;
-  margin: 15px;
-}
-body ul li {
-  display: inline-block;
-  margin: 10px;
-}
-body a {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-}
-body .a {
-  text-decoration: none;
-  list-style: none;
-}
-body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobre ellos*/
-  font-weight: bold;
-  padding: 20px;
-  background-color: #C3FCF1;
-  color: #000000;
-}
-
 main h1 {
   text-align: center;
   font-family: "Montserrat regular", sans-serif;
@@ -720,40 +618,6 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-}
-
-body {
-  /*Estilo del cuerpo del sitio*/
-  background-color: #F7F2CB;
-  font-family: "Montserrat", sans-serif;
-}
-body .menu {
-  background-color: #B5B074;
-}
-body .logo {
-  width: 170px;
-  height: 150px;
-  border: 4px solid #000000;
-  margin: 15px;
-}
-body ul li {
-  display: inline-block;
-  margin: 10px;
-}
-body a {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-}
-body .a {
-  text-decoration: none;
-  list-style: none;
-}
-body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobre ellos*/
-  font-weight: bold;
-  padding: 20px;
-  background-color: #C3FCF1;
-  color: #000000;
 }
 
 main .flex-conteiner {
