--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,9 @@
 @import "variables";
 @import "reset";
+@import "generales";
 @import "index";
 @import "acerca-de-nosotros";
 @import "contacto";
 @import "ayuda";
 @import "productos";
+
