--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -31,6 +31,14 @@ main {
         font-family: 'Times New Roman', Times, serif;
         letter-spacing: 4px;
     }
+    form {
+        background-color: #000000;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        max-width: 400px;
+        margin: 0 auto;
+      }
     
     .button-span {
         background-color: #000000;
