--- a/scss/_ayuda.scss
+++ b/scss/_ayuda.scss
@@ -8,17 +8,17 @@ header {
 }
 
 main {
+    
     h1 {
         text-align: center;
         font-family: $fuente-principal;
         margin: 10px 0px 20px 0px;
     }
-    
-    h2 {
-        font-family: $fuente-principal;
+    #tetx-ayuda{
+        font-family: "Montserrat regular", sans-serif;
         margin: 10px 0px 20px 0px;
+        padding: 15px;
     }
-    
     p {
         color: #222722;
         font-family: Georgia, 'Times New Roman', Times, serif;
@@ -33,6 +33,7 @@ main {
         text-decoration: none;
         list-style: none;
     }
+    
 }
 
 footer {
