--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,6 @@ main .img-nos {
   height: 300px;
   display: flex;
   flex-wrap: wrap;
-  margin: 20px 0px 20px 680px;
 }
 
 footer {
@@ -504,10 +503,10 @@ main h1 {
   font-family: "Montserrat regular", sans-serif;
   margin: 10px 0px 20px 0px;
 }
-main #tetx-ayuda {
+main h2 {
   font-family: "Montserrat regular", sans-serif;
   margin: 10px 0px 20px 0px;
-  padding: 15px;
+  padding: 10px;
 }
 main p {
   color: #222722;
@@ -646,11 +645,12 @@ main .img {
   width: 100%;
   height: 220px;
 }
-main .p-cajas {
+main p.p-cajas {
   color: #000000;
   font-family: Georgia, "Times New Roman", Times, serif;
-  letter-spacing: 3px;
   margin: 0px 0px 10px;
+  letter-spacing: 3px;
+  padding-left: 10px;
 }
 
 footer {
