--- a/scss/_ayuda.scss
+++ b/scss/_ayuda.scss
@@ -14,11 +14,13 @@ main {
         font-family: $fuente-principal;
         margin: 10px 0px 20px 0px;
     }
-    #tetx-ayuda{
-        font-family: "Montserrat regular", sans-serif;
+
+    h2 {
+        font-family: $fuente-principal;
         margin: 10px 0px 20px 0px;
-        padding: 15px;
+        padding: 10px;
     }
+    
     p {
         color: #222722;
         font-family: Georgia, 'Times New Roman', Times, serif;
