--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -25,12 +25,13 @@ main {
         width: 100%;
         height: 220px;
     }
-
-    .p-cajas {
+    
+    p.p-cajas {
         color: #000000;
         font-family: Georgia, 'Times New Roman', Times, serif;
-        letter-spacing: 3px; 
         margin: 0px 0px 10px;
+        letter-spacing: 3px; 
+        padding-left: 10px;
     }
 }
 
