--- a/css/style.css
+++ b/css/style.css
@@ -315,12 +315,6 @@ footer .fotos-galeria img:hover {
     justify-content: center;
     padding: 10px;
   }
-  .img-nos {
-    width: 300px;
-    height: 300px;
-    margin: 20px;
-    border: 2px solid #000000;
-  }
   .caja-mates {
     width: 275px;
     height: 300px;
@@ -521,6 +515,9 @@ main ol {
   margin: 10px;
   text-decoration: none;
   list-style: none;
+}
+main .ayuda {
+  padding: 10px;
 }
 
 footer {
