--- a/scss/_acerca-de-nosotros copy.scss
+++ b/scss/_acerca-de-nosotros copy.scss
@@ -1,6 +1,6 @@
 header {
     /*Estilo de Cabecera*/
-    background-color:$color-secundario;
+    background-color: $color-secundario;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -8,33 +8,27 @@ header {
 }
 
 main {
-    .flex-conteiner {
+    h1 {
+        text-align: center;
+        font-family: $fuente-principal;
+        margin: 10px 0px 20px 0px;
+    }
+
+    p.txt-nos{
+        color: #222222;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        letter-spacing: 3px; 
+        margin: 0px 0px 10px;
+        padding: 0px 15px ;
+    }
+    .img-nos {
+        width: 300px;
+        height: 300px;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .caja-mates {
-        width: 285px;
-        height: 300px;
-        border: 3px solid #659B91;
-        margin: 15px;
-        
-    }
-
-    .img {
-        width: 100%;
-        height: 220px;
-    }
-    
-    p.p-cajas {
-        color: #000000;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        margin: 0px 0px 10px;
-        letter-spacing: 3px; 
-        padding: 10px;
     }
 }
+
 
 footer {
     /*Estilo del pie de pagina del sitio*/
@@ -100,7 +94,6 @@ footer {
         transform: scale(1.2);
     }
 }
-
 @media (max-width: 667px)  {
 
     header {
@@ -130,7 +123,7 @@ footer {
         justify-content: center;
         padding: 10px;
     }
-
+    
     .caja-mates {
         width: 275px;
         height: 300px;
