correccion de trabajo

--- a/scss/_acerca-de-nosotros.scss
+++ b/scss/_acerca-de-nosotros.scss
@@ -26,6 +26,7 @@ main {
         height: 300px;
         display: flex;
         flex-wrap: wrap;
+        margin: 20px 0px 20px 540px;
     }
 }
 
@@ -124,7 +125,13 @@ footer {
         padding: 10px;
     }
 
-    
+    .img-nos {
+        width: 300px;
+        height: 300px;
+        margin: 20px;
+        margin: 20px 0px 20px 60px;
+        border: 2px solid #000000;
+      }
 
     .caja-mates {
         width: 275px;
