--- a/css/style.css
+++ b/css/style.css
@@ -15,40 +15,6 @@
   list-style: none;
 }
 
-body {
-  /*Estilo del cuerpo del sitio*/
-  background-color: #F7F2CB;
-  font-family: "Montserrat regular", sans-serif;
-}
-body .menu {
-  background-color: #B5B074;
-}
-body .logo {
-  width: 170px;
-  height: 150px;
-  border: 4px solid #000000;
-  margin: 15px;
-}
-body ul li {
-  display: inline-block;
-  margin: 10px;
-}
-body a {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 700;
-  color: #ffffff;
-}
-body .a {
-  text-decoration: none;
-  list-style: none;
-}
-body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobre ellos*/
-  font-weight: bold;
-  transform: scale;
-  background-color: #C3FCF1;
-  color: #000000;
-}
-
 header {
   /*Estilo de Cabecera*/
   background-color: #B5B074;
@@ -233,6 +199,7 @@ main .img-nos {
   height: 300px;
   display: flex;
   flex-wrap: wrap;
+  margin: 20px 0px 20px 540px;
 }
 
 footer {
@@ -314,6 +281,13 @@ footer .fotos-galeria img:hover {
     display: flex;
     justify-content: center;
     padding: 10px;
+  }
+  .img-nos {
+    width: 300px;
+    height: 300px;
+    margin: 20px;
+    margin: 20px 0px 20px 60px;
+    border: 2px solid #000000;
   }
   .caja-mates {
     width: 275px;
@@ -500,7 +474,7 @@ main h1 {
 main h2 {
   font-family: "Montserrat regular", sans-serif;
   margin: 10px 0px 20px 0px;
-  padding: 15px;
+  padding: 30px;
 }
 main p {
   color: #222722;
@@ -744,6 +718,39 @@ footer .fotos-galeria img:hover {
     flex-direction: column;
     text-align: center;
   }
+}
+body {
+  /*Estilo del cuerpo del sitio*/
+  background-color: #F7F2CB;
+  font-family: "Montserrat regular", sans-serif;
+}
+body .menu {
+  background-color: #B5B074;
+}
+body .logo {
+  width: 170px;
+  height: 150px;
+  border: 4px solid #000000;
+  margin: 15px;
+}
+body ul li {
+  display: inline-block;
+  margin: 10px;
+}
+body a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 700;
+  color: #ffffff;
+}
+body .a {
+  text-decoration: none;
+  list-style: none;
+}
+body .a:hover { /*Todos los elementos <a> cuando el mouse esté posicionado sobre ellos*/
+  font-weight: bold;
+  transform: scale;
+  background-color: #C3FCF1;
+  color: #000000;
 }
 
 /*# sourceMappingURL=style.css.map */
