--- a/styles/style.css
+++ b/styles/style.css
@@ -266,7 +266,7 @@ main .img-nos {
   height: 300px;
   display: flex;
   flex-wrap: wrap;
-  margin: 20px 0px 20px 80px;
+  margin: 20px 0px 20px 540px;
 }
 
 footer {
@@ -425,6 +425,7 @@ main h1 {
 main h2 {
   font-family: "Montserrat regular", sans-serif;
   margin: 10px 0px 20px 0px;
+  padding: 15px;
 }
 main p {
   color: #222722;
@@ -765,7 +766,7 @@ main .flex-conteiner {
 }
 main .caja-mates {
   width: 275px;
-  height: 300px;
+  height: 320px;
   border: 3px solid #659B91;
   margin: 15px;
 }
@@ -778,6 +779,7 @@ main .p-cajas {
   font-family: Georgia, "Times New Roman", Times, serif;
   letter-spacing: 3px;
   margin: 0px 0px 10px;
+  padding: 5px;
 }
 
 footer {
