--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -31,6 +31,15 @@ main {
         font-family: 'Times New Roman', Times, serif;
         letter-spacing: 4px;
     }
+
+    .custom-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+      }
+      
     form {
         background-color: #000000;
         padding: 20px;
@@ -54,7 +63,7 @@ main {
     
     .map {
         filter: grayscale(100%) invert(92%) contrast(93%);
-        margin: 25px 0px 25px 0;
+        margin: 25px 0px 25px 0px;
     }
 }
 
