--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,12 +1,3 @@
-header {
-    /*Estilo de Cabecera*/
-    background-color:$color-secundario;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
 main {
     .flex-conteiner {
         display: flex;
@@ -24,6 +15,7 @@ main {
     .img {
         width: 100%;
         height: 220px;
+        object-fit: cover;
     }
     
     p.p-cajas {
