--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -15,6 +15,7 @@ main {
         font-family: Georgia, 'Times New Roman', Times, serif;
         letter-spacing: 3px; 
         margin: 0px 0px 10px;
+        padding: 8px;
     }
 
     .tetx-cont {
@@ -53,7 +54,7 @@ main {
 footer {
     /*Estilo del pie de pagina del sitio*/
     background-color: #000000;
-    padding: 100px 0px;
+    padding: 10px 0px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
