--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -1,6 +1,6 @@
 header {
     /*Estilo de Cabecera*/
-    background-color: #121128;
+    background-color: $color-secundario;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
