--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -2,19 +2,19 @@ main {
     h1 {
         text-align: center;
         font-family: $fuente-principal;
-        margin: 10px 0px 20px 0px;
+        margin: 10px 0 20px 0;
     }
     
     h2 {
         font-family: $fuente-principal;
-        margin: 10px 0px 20px 0px;
+        margin: 10px 0 20px 0;
     }
     
     p {
         color: #222722;
         font-family: Georgia, 'Times New Roman', Times, serif;
         letter-spacing: 3px; 
-        margin: 0px 0px 10px;
+        margin: 0px;
         padding: 8px;
     }
 
@@ -37,7 +37,7 @@ main {
         background-color: #000000;
         padding: 16px 24px;
         border-radius: 6px;
-        transition: .3s;
+        transition: 0.3s;
         margin: 10px;
     }
     
@@ -47,7 +47,7 @@ main {
     
     .map {
         filter: grayscale(100%) invert(92%) contrast(93%);
-        margin: 25px 0px 25px 0px;
+        margin: 25px 0px;
     }
 }
 
