--- a/scss/_ayuda.scss
+++ b/scss/_ayuda.scss
@@ -1,4 +1,4 @@
-main {
+.main-ayuda {
     
     h1, h2 {
         text-align: center; 
@@ -22,13 +22,13 @@ main {
     
 }
 
-footer {
+.ayuda-footer{
     /*Estilo del pie de pagina del sitio*/
     background-color: #000000;
     padding: 10px 0px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 
     .logo-2 {
         width: 150px;
