--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -52,7 +52,7 @@ footer {
     padding: 10px 0px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 
     .logo-2 {
         width: 150px;
