--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -1,4 +1,4 @@
-main {
+.main-produc {
     .flex-conteiner {
         display: flex;
         flex-wrap: wrap;
@@ -27,7 +27,7 @@ main {
     }
 }
 
-footer {
+.produc-foo{
     /*Estilo del pie de pagina del sitio*/
     background-color: #000000;
     padding: 10px 0px;
