--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ footer {
   padding: 20px 0px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 footer .logo-2 {
   width: 150px;
@@ -276,7 +276,7 @@ footer {
   padding: 20px 0px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 footer .logo-2 {
   width: 150px;
@@ -461,7 +461,7 @@ footer {
   padding: 20px 0px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 footer .logo-2 {
   width: 150px;
@@ -626,7 +626,7 @@ footer {
   padding: 20px 0px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 footer .logo-2 {
   width: 150px;
@@ -790,7 +790,7 @@ footer {
   padding: 20px 0px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 footer .logo-2 {
   width: 150px;
